@@ -345,6 +345,7 @@ namespace mesmer
   private:
 
     typedef vector<vector<double> > Table;
+    typedef map<string, double>::const_iterator RxnItr;
 
     enum VarRedMthd {
       RATIOCONTROL,
@@ -383,6 +384,9 @@ namespace mesmer
 
     // This method generates the column header for the output tables.
     string columnHeader() const;
+
+	// This method writes the input variable key.
+    void WriteInputVariableKey(stringstream &Key) const;
 
     // Set of orthogonal functions to be used in calculation.
     probDensity *m_probDensity;
@@ -453,7 +457,6 @@ namespace mesmer
 
   bool SensitivityAnalysis::DoCalculationOld(System* pSys)
   {
-
     m_nVar = Rdouble::withRange().size();
 
     if (m_nVar < 2) {
@@ -477,17 +480,13 @@ namespace mesmer
     //Default is to disable ctest during analysis. Restored when leaving this function.
     StopCTestOutput stop(true);
 
-    //
-    // Begin by finding the starting point chi-squared value.
-    //
-
-    vector<double> currentLocation(m_nVar, 0.0);
+    vector<double> originalLocation(m_nVar, 0.0);
     vector<double> newLocation(m_nVar, 0.0);
 
-    GetLocation(currentLocation);
+    GetLocation(originalLocation);
 
     // Invoke SetLocation to catch any constrained parameters.
-    SetLocation(currentLocation);
+    SetLocation(originalLocation);
 
     vector<double> Temperature;
     vector<double> Concentration;
@@ -500,6 +499,23 @@ namespace mesmer
     size_t nConditions = Temperature.size();
     for (size_t nCnd(0); nCnd < nConditions; nCnd++) {
 
+	  // Test calculation to determine number of outputs.
+      SetLocation(originalLocation);
+      map<string, double> phenRates;
+      pSys->calculate(nCnd, phenRates);
+
+      m_nOut = phenRates.size();
+      stringstream outputKey;
+	  outputKey << "Output variable key:" << endl << endl;
+	  size_t idx(1) ;
+      for (RxnItr irxn = phenRates.begin(); irxn != phenRates.end(); irxn++, idx++) {
+        outputKey << "  " << setw(30) << left << irxn->first << ": k(" << idx << ")" << endl;
+      }
+      stringstream inputKey;
+	  WriteInputVariableKey(inputKey);
+      cinfo << inputKey.str()  ;
+	  cinfo << outputKey.str() ;
+
       // String stream to hold results. 
       stringstream sensitivityTable;
 
@@ -510,9 +526,15 @@ namespace mesmer
       sensitivityTable << "  Temperature:   " << formatFloat(Temperature[nCnd], 5, 15) << " K" << endl;
       sensitivityTable << "  Concentration: " << formatFloat(Concentration[nCnd], 5, 15) << " ppcc" << endl;
       sensitivityTable << endl;
-      for (size_t iVar(0); iVar < m_nVar; iVar++) {
-        Rdouble var = *Rdouble::withRange()[iVar];
-        sensitivityTable << setw(15) << var.get_varname();
+      for (size_t iVar(0), idx(1); iVar < m_nVar; iVar++, idx++) {
+		stringstream strIdx ;
+		strIdx << "(" << idx << ")" ;
+        sensitivityTable << setw(15) << strIdx.str() ;
+      }
+      for (size_t iOut(0), idx(1); iOut < m_nOut; iOut++, idx++) {
+		stringstream strIdx ;
+		strIdx << "k(" << idx << ")" ;
+        sensitivityTable << setw(15) << strIdx.str() ;
       }
       sensitivityTable << endl;
 
@@ -525,24 +547,29 @@ namespace mesmer
 
         // Use random vector generated by sobol method to perturb parameter values.
 
-        m_probDensity->rndLocation(rndmd, currentLocation, newLocation);
+        m_probDensity->rndLocation(rndmd, originalLocation, newLocation);
 
         // Set perturbed parameters and calculate new quantities.
 
         SetLocation(newLocation);
-        vector<double> Quantities;
-        pSys->calculate(nCnd, Quantities, false);
 
-        // Write perturbed parameters and values calculated from them.
-        // SHR: Note the loop over the calculated values is two so as
-        // to miss out the expt. values.
+		map<string, double> phenRates;
+
+        // As some perturbations will produce unrealistic configurations the
+		// diagonalizer will fail, in which case this configuration is skipped.
+		try {
+           pSys->calculate(nCnd, phenRates);
+		} catch (...) {
+		  continue ;
+		}
 
         for (size_t j(0); j < newLocation.size(); j++) {
           sensitivityTable << formatFloat(rndmd[j], 5, 15);
         }
-        for (size_t j(1); j < Quantities.size(); j += 2) {
-          sensitivityTable << formatFloat(Quantities[j], 5, 15);
+        for (RxnItr irxn = phenRates.begin(); irxn != phenRates.end(); irxn++) {
+          sensitivityTable << formatFloat(irxn->second, 5, 15);
         }
+
         sensitivityTable << endl;
 
       }
@@ -551,12 +578,10 @@ namespace mesmer
     }
 
     return true;
-
   }
 
   bool SensitivityAnalysis::DoCalculationNew(System* pSys)
   {
-
     m_nVar = Rdouble::withRange().size();
 
     if (m_nVar < 2) {
@@ -579,10 +604,6 @@ namespace mesmer
     // Use the same grain numbers for for all calcuations regardless of 
     // temperature (i.e. reduce the number of times micro-rates are calculated).
     pSys->m_Flags.useTheSameCellNumber = true;
-
-    //
-    // Begin by finding the starting point chi-squared value.
-    //
 
     vector<double> originalLocation(m_nVar, 0.0);
     vector<double> newLocation(m_nVar, 0.0);
@@ -618,8 +639,7 @@ namespace mesmer
       m_nOut = phenRates.size();
       vector<double> f0(m_nOut, 0.0), varf(m_nOut, 0.0);
       vector<string> rxnId;
-      map<string, double>::const_iterator irxn = phenRates.begin();
-      for (; irxn != phenRates.end(); irxn++) {
+      for (RxnItr irxn = phenRates.begin(); irxn != phenRates.end(); irxn++) {
         rxnId.push_back(irxn->first);
       }
       Table locationData ;
@@ -640,8 +660,9 @@ namespace mesmer
 
         SetLocation(newLocation);
         map<string, double> phenRates;
-		// phenRates["Test"] = 0.0 ;
 
+        // As some perturbations will produce unrealistic configurations the
+		// diagonalizer will fail, in which case this configuration is skipped.
 		try {
            pSys->calculate(nCnd, phenRates);
 		} catch (...) {
@@ -649,7 +670,7 @@ namespace mesmer
 		}
 
 		locationData.push_back(rndmd) ;
-        map<string, double>::const_iterator irxn = phenRates.begin();
+        RxnItr irxn = phenRates.begin();
         for (size_t nOut(0); irxn != phenRates.end(); irxn++, nOut++) {
           double output = irxn->second;
           outputData[nOut].push_back(output) ;
@@ -1024,12 +1045,9 @@ namespace mesmer
 
     ctest << endl << "Sensitivity Analysis: Temperature = " << setw(5) << setprecision(4) << Temperature << ", Concentration = " << Concentration << endl << endl;
 
-    ctest << "Input variable key:" << endl << endl;
-    for (size_t iVar(0), idx(1); iVar < m_nVar; iVar++, idx++) {
-      Rdouble var = *Rdouble::withRange()[iVar];
-      ctest << "  " << setw(30) << left << var.get_varname() << ": (" << idx << ")" << endl;
-    }
-    ctest << endl;
+    stringstream Key;
+	WriteInputVariableKey(Key);
+    ctest << Key.str() << endl;
 
     for (size_t i(0), idx(0); i < m_nOut; i++) {
 
@@ -1082,5 +1100,14 @@ namespace mesmer
     return ss.str();
   }
 
-} //namespace
+  // This method writes the input variable key.
+  void SensitivityAnalysis::WriteInputVariableKey(stringstream &Key) const {
+    Key << "Input variable key:" << endl << endl;
+    for (size_t iVar(0), idx(1); iVar < m_nVar; iVar++, idx++) {
+      Rdouble var = *Rdouble::withRange()[iVar];
+      Key << "  " << setw(30) << left << var.get_varname() << ": (" << idx << ")" << endl;
+    }
+    Key << endl;
+  }
 
+} //namespace
